<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoult"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo2"
    tools:context=".MainActivity">


...
        android:layout_height="124dp"

        android:layout_marginStart="100dp"
        android:layout_marginLeft="100dp"
        android:layout_marginTop="100dp"
        android:src="@drawable/historial"
        app:layout_constraintStart_toEndOf="@+id/diario"
        app:layout_constraintTop_toBottomOf="@+id/caloriasmain" />

    <TextView
        android:id="@+id/diariotext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
...
